Atualizações: - Consulta de cartão por numero
